--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "lz4-napi": "^2.2.0",
     "oodle": "github:Mathicha/oodle",
     "snappyjs": "^0.7.0",
-    "tiny-typed-emitter": "^2.1.0",
-    "winston": "^3.8.2"
+    "tiny-typed-emitter": "^2.1.0"
   },
   "devDependencies": {
     "@tsconfig/node18-strictest-esm": "^1.0.1",
